// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`skeleton demo > renders _semantic correctly 1`] = `
<div
  class="semantic-preview-container"
  data-v-dfc8ebef=""
>
  <div
    class="ant-row css-var-root semantic-preview-row"
    data-v-dfc8ebef=""
  >
    <div
      class="ant-col ant-col-16 css-var-root semantic-preview-col"
      data-v-dfc8ebef=""
    >
      <div
        class="ant-skeleton ant-skeleton-with-avatar semantic-mark-root css-var-v-0"
      >
        <div
          class="semantic-mark-header ant-skeleton-header"
        >
          <span
            class="ant-skeleton-avatar ant-skeleton-avatar-lg ant-skeleton-avatar-circle semantic-mark-avatar"
          />
        </div>
        <div
          class="semantic-mark-section ant-skeleton-section"
        >
          <h3
            class="ant-skeleton-title semantic-mark-title"
            style="width: 50%;"
          />
          <ul
            class="ant-skeleton-paragraph semantic-mark-paragraph"
          >
            <li />
            <li />
            <li />
            <li />
          </ul>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-8 css-var-root"
      data-v-dfc8ebef=""
    >
      <ul
        class="semantic-list"
        data-v-dfc8ebef=""
      >
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  root
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Root element with table display, width, animation effects, border radius and other skeleton container basic styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  header
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Header element with table cell, padding, vertical alignment and other avatar placeholder area layout styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  section
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Section element with skeleton content area layout styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  avatar
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Avatar element with inline-block display, vertical alignment, background color, size, border radius and other avatar placeholder styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  title
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Title element with width, height, background color, border radius and other title placeholder styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  paragraph
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Paragraph element with padding, list item styles, background color, border radius and other paragraph placeholder styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`skeleton demo > renders active correctly 1`] = `
<div
  class="ant-skeleton ant-skeleton-active css-var-root"
>
  <!---->
  <div
    class="ant-skeleton-section"
  >
    <h3
      class="ant-skeleton-title"
      style="width: 38%;"
    />
    <ul
      class="ant-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width: 61%;"
      />
    </ul>
  </div>
</div>
`;

exports[`skeleton demo > renders basic correctly 1`] = `
<div
  class="ant-skeleton css-var-root"
>
  <!---->
  <div
    class="ant-skeleton-section"
  >
    <h3
      class="ant-skeleton-title"
      style="width: 38%;"
    />
    <ul
      class="ant-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width: 61%;"
      />
    </ul>
  </div>
</div>
`;

exports[`skeleton demo > renders children correctly 1`] = `
<div
  class="ant-space ant-space-vertical css-var-root"
  style="column-gap: 16px; row-gap: 16px; width: 100%;"
>
  <div
    class="ant-space-item"
  >
    <h4
      style="margin-bottom: 16px;"
    >
       Antdv Next, a design language 
    </h4>
    <p>
       We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently. 
    </p>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <button
      class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <transition-stub
        appear="false"
        css="true"
        name="ant-btn-loading-icon-motion"
        persisted="false"
      >
        <!---->
      </transition-stub>
      <span>
         Show Skeleton 
      </span>
      <!---->
    </button>
  </div>
  <!---->
</div>
`;

exports[`skeleton demo > renders complex correctly 1`] = `
<div
  class="ant-skeleton ant-skeleton-with-avatar css-var-root"
>
  <div
    class="ant-skeleton-header"
  >
    <span
      class="ant-skeleton-avatar ant-skeleton-avatar-lg ant-skeleton-avatar-circle"
    />
  </div>
  <div
    class="ant-skeleton-section"
  >
    <h3
      class="ant-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="ant-skeleton-paragraph"
    >
      <li />
      <li />
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`skeleton demo > renders componentToken correctly 1`] = `
<div
  data-v-app=""
>
  <div
    class="ant-skeleton ant-skeleton-active css-var-v-0"
  >
    <!---->
    <div
      class="ant-skeleton-section"
    >
      <h3
        class="ant-skeleton-title"
        style="width: 38%;"
      />
      <ul
        class="ant-skeleton-paragraph"
      >
        <li />
        <li />
        <li
          style="width: 61%;"
        />
      </ul>
    </div>
  </div>
</div>
`;

exports[`skeleton demo > renders element correctly 1`] = `
<div
  class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-middle ant-flex-vertical"
>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-root"
  >
    <div
      class="ant-space-item"
    >
      <div
        class="ant-skeleton ant-skeleton-element css-var-root"
      >
        <span
          block="false"
          class="ant-skeleton-button"
        />
      </div>
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <div
        class="ant-skeleton ant-skeleton-element css-var-root"
      >
        <span
          class="ant-skeleton-avatar ant-skeleton-avatar-circle"
        />
      </div>
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <div
        class="ant-skeleton ant-skeleton-element css-var-root"
      >
        <span
          class="ant-skeleton-input"
        />
      </div>
    </div>
    <!---->
  </div>
  <div
    class="ant-skeleton ant-skeleton-element css-var-root"
  >
    <span
      block="false"
      class="ant-skeleton-button"
    />
  </div>
  <div
    class="ant-skeleton ant-skeleton-element css-var-root"
  >
    <span
      block="false"
      class="ant-skeleton-input"
    />
  </div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-root"
  >
    <div
      class="ant-space-item"
    >
      <div
        class="ant-skeleton ant-skeleton-element css-var-root"
      >
        <div
          class="ant-skeleton-image"
        >
          <svg
            class="ant-skeleton-image-svg"
            viewBox="0 0 1098 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Image placeholder
            </title>
            <path
              class="ant-skeleton-image-path"
              d="M365.7 329.1q0 45.8-32 77.7t-77.7 32-77.7-32-32-77.7 32-77.6 77.7-32 77.7 32 32 77.6M951 548.6v256H146.3V694.9L329 512l91.5 91.4L713 311zm54.8-402.3H91.4q-7.4 0-12.8 5.4T73 164.6v694.8q0 7.5 5.5 12.9t12.8 5.4h914.3q7.5 0 12.9-5.4t5.4-12.9V164.6q0-7.5-5.4-12.9t-12.9-5.4m91.4 18.3v694.8q0 37.8-26.8 64.6t-64.6 26.9H91.4q-37.7 0-64.6-26.9T0 859.4V164.6q0-37.8 26.8-64.6T91.4 73h914.3q37.8 0 64.6 26.9t26.8 64.6"
            />
          </svg>
        </div>
      </div>
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <div
        class="ant-skeleton ant-skeleton-element css-var-root"
      >
        <div
          class="ant-skeleton-node"
          style="width: 160px;"
        >
          <!---->
        </div>
      </div>
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <div
        class="ant-skeleton ant-skeleton-element css-var-root"
      >
        <div
          class="ant-skeleton-node"
        >
          <span
            aria-label="dot-chart"
            class="anticon anticon-dot-chart"
            role="img"
            style="font-size: 40px; color: rgb(191, 191, 191);"
          >
            <svg
              aria-hidden="true"
              data-icon="dot-chart"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M888 792H200V168c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v688c0 4.4 3.6 8 8 8h752c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM288 604a64 64 0 10128 0 64 64 0 10-128 0zm118-224a48 48 0 1096 0 48 48 0 10-96 0zm158 228a96 96 0 10192 0 96 96 0 10-192 0zm148-314a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <!---->
  </div>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-rail"
    role="separator"
  >
    <!---->
  </div>
  <form
    class="ant-form ant-form-inline css-var-root ant-form-css-var"
    style="margin: 16px 0px;"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center css-var-root"
      style="flex-wrap: wrap; column-gap: 16px; row-gap: 16px;"
    >
      <div
        class="ant-space-item"
      >
        <div
          class="ant-form-item css-var-root ant-form-css-var ant-form-item-inline"
        >
          <div
            class="ant-row css-var-root ant-form-item-row"
          >
            <div
              class="ant-col css-var-root ant-form-item-label"
            >
              <label
                class=""
                title="Active"
              >
                Active
              </label>
            </div>
            <div
              class="ant-col css-var-root ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <button
                    aria-checked="false"
                    checked="false"
                    class="ant-switch css-var-root"
                    role="switch"
                    type="button"
                  >
                    <div
                      class="ant-switch-handle"
                    >
                      <!---->
                    </div>
                    <span
                      class="ant-switch-inner"
                    >
                      <span
                        class="ant-switch-inner-checked"
                      >
                        <!---->
                      </span>
                      <span
                        class="ant-switch-inner-unchecked"
                      >
                        <!---->
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="ant-form-item-additional"
              >
                <transition-stub
                  appear="true"
                  css="true"
                  enteractiveclass="ant-form-show-help ant-form-show-help-enter ant-form-show-help-appear ant-form-show-help-appear-prepare ant-form-show-help-enter-prepare "
                  enterfromclass="ant-form-show-help ant-form-show-help-enter ant-form-show-help-appear ant-form-show-help-appear-prepare ant-form-show-help-enter-prepare ant-form-show-help-enter-start"
                  entertoclass="ant-form-show-help ant-form-show-help-enter ant-form-show-help-appear ant-form-show-help-appear-active ant-form-show-help-enter-active"
                  leaveactiveclass="ant-form-show-help ant-form-show-help-leave ant-form-show-help-leave-active"
                  leavefromclass="ant-form-show-help ant-form-show-help-leave"
                  leavetoclass="ant-form-show-help ant-form-show-help-leave ant-form-show-help-leave-active"
                  name="ant-form-show-help"
                  persisted="false"
                >
                  <!---->
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
          </div>
          <!---->
        </div>
      </div>
      <!---->
      <div
        class="ant-space-item"
      >
        <div
          class="ant-form-item css-var-root ant-form-css-var ant-form-item-inline"
        >
          <div
            class="ant-row css-var-root ant-form-item-row"
          >
            <div
              class="ant-col css-var-root ant-form-item-label"
            >
              <label
                class=""
                title="Button and Input Block"
              >
                Button and Input Block
              </label>
            </div>
            <div
              class="ant-col css-var-root ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <button
                    aria-checked="false"
                    checked="false"
                    class="ant-switch css-var-root"
                    role="switch"
                    type="button"
                  >
                    <div
                      class="ant-switch-handle"
                    >
                      <!---->
                    </div>
                    <span
                      class="ant-switch-inner"
                    >
                      <span
                        class="ant-switch-inner-checked"
                      >
                        <!---->
                      </span>
                      <span
                        class="ant-switch-inner-unchecked"
                      >
                        <!---->
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="ant-form-item-additional"
              >
                <transition-stub
                  appear="true"
                  css="true"
                  enteractiveclass="ant-form-show-help ant-form-show-help-enter ant-form-show-help-appear ant-form-show-help-appear-prepare ant-form-show-help-enter-prepare "
                  enterfromclass="ant-form-show-help ant-form-show-help-enter ant-form-show-help-appear ant-form-show-help-appear-prepare ant-form-show-help-enter-prepare ant-form-show-help-enter-start"
                  entertoclass="ant-form-show-help ant-form-show-help-enter ant-form-show-help-appear ant-form-show-help-appear-active ant-form-show-help-enter-active"
                  leaveactiveclass="ant-form-show-help ant-form-show-help-leave ant-form-show-help-leave-active"
                  leavefromclass="ant-form-show-help ant-form-show-help-leave"
                  leavetoclass="ant-form-show-help ant-form-show-help-leave ant-form-show-help-leave-active"
                  name="ant-form-show-help"
                  persisted="false"
                >
                  <!---->
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
          </div>
          <!---->
        </div>
      </div>
      <!---->
      <div
        class="ant-space-item"
      >
        <div
          class="ant-form-item css-var-root ant-form-css-var ant-form-item-inline"
        >
          <div
            class="ant-row css-var-root ant-form-item-row"
          >
            <div
              class="ant-col css-var-root ant-form-item-label"
            >
              <label
                class=""
                title="Size"
              >
                Size
              </label>
            </div>
            <div
              class="ant-col css-var-root ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="ant-radio-group ant-radio-group-outline css-var-root ant-radio-css-var"
                  >
                    <label
                      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked ant-radio-button-wrapper-in-form-item css-var-root ant-radio-css-var"
                    >
                      <span
                        class="ant-radio-button ant-radio-button-checked"
                        name="v-0"
                      >
                        <input
                          checked=""
                          class="ant-radio-button-input"
                          type="radio"
                        />
                      </span>
                      <span
                        class="ant-radio-button-label"
                      >
                         Default 
                      </span>
                    </label>
                    <label
                      class="ant-radio-button-wrapper ant-radio-button-wrapper-in-form-item css-var-root ant-radio-css-var"
                    >
                      <span
                        class="ant-radio-button"
                        name="v-0"
                      >
                        <input
                          class="ant-radio-button-input"
                          type="radio"
                        />
                      </span>
                      <span
                        class="ant-radio-button-label"
                      >
                         Large 
                      </span>
                    </label>
                    <label
                      class="ant-radio-button-wrapper ant-radio-button-wrapper-in-form-item css-var-root ant-radio-css-var"
                    >
                      <span
                        class="ant-radio-button"
                        name="v-0"
                      >
                        <input
                          class="ant-radio-button-input"
                          type="radio"
                        />
                      </span>
                      <span
                        class="ant-radio-button-label"
                      >
                         Small 
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="ant-form-item-additional"
              >
                <transition-stub
                  appear="true"
                  css="true"
                  enteractiveclass="ant-form-show-help ant-form-show-help-enter ant-form-show-help-appear ant-form-show-help-appear-prepare ant-form-show-help-enter-prepare "
                  enterfromclass="ant-form-show-help ant-form-show-help-enter ant-form-show-help-appear ant-form-show-help-appear-prepare ant-form-show-help-enter-prepare ant-form-show-help-enter-start"
                  entertoclass="ant-form-show-help ant-form-show-help-enter ant-form-show-help-appear ant-form-show-help-appear-active ant-form-show-help-enter-active"
                  leaveactiveclass="ant-form-show-help ant-form-show-help-leave ant-form-show-help-leave-active"
                  leavefromclass="ant-form-show-help ant-form-show-help-leave"
                  leavetoclass="ant-form-show-help ant-form-show-help-leave ant-form-show-help-leave-active"
                  name="ant-form-show-help"
                  persisted="false"
                >
                  <!---->
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
          </div>
          <!---->
        </div>
      </div>
      <!---->
      <div
        class="ant-space-item"
      >
        <div
          class="ant-form-item css-var-root ant-form-css-var ant-form-item-inline"
        >
          <div
            class="ant-row css-var-root ant-form-item-row"
          >
            <div
              class="ant-col css-var-root ant-form-item-label"
            >
              <label
                class=""
                title="Button Shape"
              >
                Button Shape
              </label>
            </div>
            <div
              class="ant-col css-var-root ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="ant-radio-group ant-radio-group-outline css-var-root ant-radio-css-var"
                  >
                    <label
                      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked ant-radio-button-wrapper-in-form-item css-var-root ant-radio-css-var"
                    >
                      <span
                        class="ant-radio-button ant-radio-button-checked"
                        name="v-1"
                      >
                        <input
                          checked=""
                          class="ant-radio-button-input"
                          type="radio"
                        />
                      </span>
                      <span
                        class="ant-radio-button-label"
                      >
                         Default 
                      </span>
                    </label>
                    <label
                      class="ant-radio-button-wrapper ant-radio-button-wrapper-in-form-item css-var-root ant-radio-css-var"
                    >
                      <span
                        class="ant-radio-button"
                        name="v-1"
                      >
                        <input
                          class="ant-radio-button-input"
                          type="radio"
                        />
                      </span>
                      <span
                        class="ant-radio-button-label"
                      >
                         Square 
                      </span>
                    </label>
                    <label
                      class="ant-radio-button-wrapper ant-radio-button-wrapper-in-form-item css-var-root ant-radio-css-var"
                    >
                      <span
                        class="ant-radio-button"
                        name="v-1"
                      >
                        <input
                          class="ant-radio-button-input"
                          type="radio"
                        />
                      </span>
                      <span
                        class="ant-radio-button-label"
                      >
                         Round 
                      </span>
                    </label>
                    <label
                      class="ant-radio-button-wrapper ant-radio-button-wrapper-in-form-item css-var-root ant-radio-css-var"
                    >
                      <span
                        class="ant-radio-button"
                        name="v-1"
                      >
                        <input
                          class="ant-radio-button-input"
                          type="radio"
                        />
                      </span>
                      <span
                        class="ant-radio-button-label"
                      >
                         Circle 
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="ant-form-item-additional"
              >
                <transition-stub
                  appear="true"
                  css="true"
                  enteractiveclass="ant-form-show-help ant-form-show-help-enter ant-form-show-help-appear ant-form-show-help-appear-prepare ant-form-show-help-enter-prepare "
                  enterfromclass="ant-form-show-help ant-form-show-help-enter ant-form-show-help-appear ant-form-show-help-appear-prepare ant-form-show-help-enter-prepare ant-form-show-help-enter-start"
                  entertoclass="ant-form-show-help ant-form-show-help-enter ant-form-show-help-appear ant-form-show-help-appear-active ant-form-show-help-enter-active"
                  leaveactiveclass="ant-form-show-help ant-form-show-help-leave ant-form-show-help-leave-active"
                  leavefromclass="ant-form-show-help ant-form-show-help-leave"
                  leavetoclass="ant-form-show-help ant-form-show-help-leave ant-form-show-help-leave-active"
                  name="ant-form-show-help"
                  persisted="false"
                >
                  <!---->
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
          </div>
          <!---->
        </div>
      </div>
      <!---->
      <div
        class="ant-space-item"
      >
        <div
          class="ant-form-item css-var-root ant-form-css-var ant-form-item-inline"
        >
          <div
            class="ant-row css-var-root ant-form-item-row"
          >
            <div
              class="ant-col css-var-root ant-form-item-label"
            >
              <label
                class=""
                title="Avatar Shape"
              >
                Avatar Shape
              </label>
            </div>
            <div
              class="ant-col css-var-root ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="ant-radio-group ant-radio-group-outline css-var-root ant-radio-css-var"
                  >
                    <label
                      class="ant-radio-button-wrapper ant-radio-button-wrapper-in-form-item css-var-root ant-radio-css-var"
                    >
                      <span
                        class="ant-radio-button"
                        name="v-2"
                      >
                        <input
                          class="ant-radio-button-input"
                          type="radio"
                        />
                      </span>
                      <span
                        class="ant-radio-button-label"
                      >
                         Square 
                      </span>
                    </label>
                    <label
                      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked ant-radio-button-wrapper-in-form-item css-var-root ant-radio-css-var"
                    >
                      <span
                        class="ant-radio-button ant-radio-button-checked"
                        name="v-2"
                      >
                        <input
                          checked=""
                          class="ant-radio-button-input"
                          type="radio"
                        />
                      </span>
                      <span
                        class="ant-radio-button-label"
                      >
                         Circle 
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="ant-form-item-additional"
              >
                <transition-stub
                  appear="true"
                  css="true"
                  enteractiveclass="ant-form-show-help ant-form-show-help-enter ant-form-show-help-appear ant-form-show-help-appear-prepare ant-form-show-help-enter-prepare "
                  enterfromclass="ant-form-show-help ant-form-show-help-enter ant-form-show-help-appear ant-form-show-help-appear-prepare ant-form-show-help-enter-prepare ant-form-show-help-enter-start"
                  entertoclass="ant-form-show-help ant-form-show-help-enter ant-form-show-help-appear ant-form-show-help-appear-active ant-form-show-help-enter-active"
                  leaveactiveclass="ant-form-show-help ant-form-show-help-leave ant-form-show-help-leave-active"
                  leavefromclass="ant-form-show-help ant-form-show-help-leave"
                  leavetoclass="ant-form-show-help ant-form-show-help-leave ant-form-show-help-leave-active"
                  name="ant-form-show-help"
                  persisted="false"
                >
                  <!---->
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
          </div>
          <!---->
        </div>
      </div>
      <!---->
    </div>
  </form>
</div>
`;

exports[`skeleton demo > renders list correctly 1`] = `
<div
  data-v-a84cf8c1=""
>
  <button
    aria-checked="false"
    checked="false"
    class="ant-switch css-var-root"
    data-v-a84cf8c1=""
    role="switch"
    style="margin-bottom: 16px;"
    type="button"
  >
    <div
      class="ant-switch-handle"
    >
      <!---->
    </div>
    <span
      class="ant-switch-inner"
    >
      <span
        class="ant-switch-inner-checked"
      >
        <!---->
      </span>
      <span
        class="ant-switch-inner-unchecked"
      >
        <!---->
      </span>
    </span>
  </button>
  <a-list
    data-source="[object Object],[object Object],[object Object]"
    data-v-a84cf8c1=""
    item-layout="vertical"
    size="large"
  />
</div>
`;

exports[`skeleton demo > renders style-class correctly 1`] = `
<div
  class="ant-flex css-var-root ant-flex-gap-middle"
  data-v-f65891a8=""
>
  <div
    class="ant-skeleton ant-skeleton-with-avatar skeleton-root css-var-root"
    data-v-f65891a8=""
  >
    <div
      class="skeleton-header ant-skeleton-header"
    >
      <span
        class="ant-skeleton-avatar ant-skeleton-avatar-lg ant-skeleton-avatar-square"
        style="border: 1px solid rgb(170, 170, 170);"
      />
    </div>
    <div
      class="ant-skeleton-section"
    >
      <h3
        class="ant-skeleton-title"
        style="border: 1px solid rgb(170, 170, 170);"
      />
      <!---->
    </div>
  </div>
  <div
    class="ant-skeleton ant-skeleton-active skeleton-root css-var-root"
    data-v-f65891a8=""
    style="border: 1px solid rgba(229, 243, 254, 0.3);"
  >
    <!---->
    <div
      class="ant-skeleton-section"
    >
      <h3
        class="ant-skeleton-title"
        style="width: 38%; background-color: rgba(229, 243, 254, 0.5); height: 20px; border-radius: 20px;"
      />
      <ul
        class="ant-skeleton-paragraph skeleton-paragraph"
      >
        <li />
        <li />
        <li
          style="width: 61%;"
        />
      </ul>
    </div>
  </div>
</div>
`;
